# Qartha-new

./: .env  .env.production  .replit  .replit.new  BACK.md  DEPLOYMENT_FIX.md  DOCUMENTATION.md  FRONTEND_API_GUIDE.md  README.md  SISTEMA_ETIQUETAS.md  add_media_column.py  add_user.py  backup_public_idfs_20250920_025914.csv  backup_public_idfs_20250923_005224.csv  backup_users_20250923_010653.csv  build.sh  clean_location_data.py  drop_obsolete_columns.py  fix_dfo_urls.py  fix_location_field.py  fix_malformed_dfo_urls.py  idfs.csv  idfs_production.csv  import_idfs.py  import_users.sh  insert_user_example.sql  migrate_assets.py  migrate_cluster_project.py  migrate_db_schema.py  migrate_dev_to_prod.sh  migrate_idfs.sh  migrate_logo_and_dfo.py  migrate_to_new_structure.py  migrate_users.py  package-lock.json  package.json  pyproject.toml  qartha-enhancement-prompt.md  qartha.db  replit.md  (+3 more)
app/: main.py
attached_assets/: Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-pack-1758232612417_1758232612417.txt  Pasted--rest-express-1-0-0-build-vite-build-esbuild-server-index-ts-platform-node-packages-exter-1758231812745_1758231812745.txt  Pasted--vite-hmr-update-src-components-Navbar-tsx-src-index-css-v-nI-HlUv42OectREe3feUR-7-50-19-PM-v-1757533850816_1757533850817.txt  Pasted-2025-09-19-19-35-28-15-cf7656ad-User-INFO-34-132-167-173-0-GET-HTTP-1-1-200-OK-2025-09-19-1758336084455_1758336084455.txt  Pasted-Act-a-como-editor-del-repo-Aplica-estos-cambios-en-toda-la-UI-del-IDF-tanto-en-la-vista-p-blica-de--1757554427644_1757554427645.txt  (+17 more)
backups/: data_tmp.sql  (+7 more)
(+61 files in other folders)
