[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
